Bug 274729 - lighttable: the thumbnail slider does not work at all
Summary: lighttable: the thumbnail slider does not work at all
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: LightTable-Thumbbar (other bugs)
Version First Reported In: 2.0.0
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-06-02 09:35 UTC by Pierre Hanser
Modified: 2022-02-01 08:55 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.0.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Pierre Hanser 2011-06-02 09:35:54 UTC
Version:           2.0.0
OS:                Linux

when i am in a folder with many pictures, and go to the ligth table,
the status bar shows the correct number of pictures, but the slider
is always like there is no possible sliding.

when i go full screen, as the place is a bit larger, there are more
thumbnail displayed but the slider is the same: no sliding possible

Reproducible: Always
Comment 1 caulier.gilles 2011-06-05 19:50:34 UTC
Which 2.0.0 beta version you use exactly ?

Gilles Caulier
Comment 2 Marcel Wiesweg 2011-06-21 21:54:48 UTC
I can confirm this.
Go to an album with a larger number of images, say 50. Select them all and click on the Light Table icon.
It is possible to navigate the thumbnail bar with the arrow keys, but the scroll bar is not scrollable.

Gilles, is the thumbnail bar in the Light Table based on model/view or still on  Qt3support code?
Comment 3 caulier.gilles 2011-06-22 07:12:52 UTC
Marcel,

I see also this bug some time ago, but i don't find the problem in code. All LT is ported to Qt4 Model View now. I take inspiration from your code in Image Editor and Album Icon View preview mode.

Gilles Caulier
Comment 4 caulier.gilles 2011-06-22 08:27:55 UTC
Marcel,

In fact, all thumbs are there, if the list of thumb is huge. Thumbbar show the first line of thumbs as well. All other are below. Take keyboard focus to thumbbar and use up/down or pgup/pgdown keys to navigate over thumbs content.

Gilles Caulier
Comment 5 Marcel Wiesweg 2011-06-23 16:28:56 UTC
Git commit 7f30892dd3df951c90a01c4c1e12f25021023bce by Marcel Wiesweg.
Committed on 23/06/2011 at 16:27.
Pushed by mwiesweg into branch 'master'.

Set a default flow for the ImageThumbnailBar.
So far, all bars were located in a dock window, so dockLocationChanged was always
called initially and set a flow. With the lighttable, there was no such call.
Setting a default valid behavior seems to be the right thing here
rather than requiring an initial call to setFlow().

BUG: 274729

M  +2    -1    NEWS     
M  +1    -0    digikam/items/imagethumbnailbar.cpp     

http://commits.kde.org/digikam/7f30892dd3df951c90a01c4c1e12f25021023bce