Set a default flow for the ImageThumbnailBar. So far, all bars were located in a dock window, so dockLocationChanged was always called initially and set a flow. With the lighttable, there was no such call. Setting a default valid behavior seems to be the right thing here rather than requiring an initial call to setFlow().

BUG: 274729